--- a/Loading_Data_EXCEL.ipynb
+++ b/Loading_Data_EXCEL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWkwwj0b6v34yTuox7V17k",
+      "authorship_tag": "ABX9TyPuPCAvj3vmKcGfG35GsH0y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,11 +37,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "WogefL6iwJYG"
+        "id": "WogefL6iwJYG",
+        "outputId": "11f13736-82ff-42fc-c8c1-9158261208a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (2.2.2)\n",
+            "Requirement already satisfied: numpy>=1.22.4 in /usr/local/lib/python3.10/dist-packages (from pandas) (1.26.4)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2024.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.10/dist-packages (from pandas) (2024.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "\n",
@@ -83,9 +100,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6h-_LDQK0Vcf",
-        "outputId": "fad12746-2f5c-47fc-8691-6e010b822700"
+        "outputId": "8bdb8c5c-2fda-4d4a-8a25-38fc9ab4610b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,9 +138,9 @@
           "height": 206
         },
         "id": "WNhcQOJ-203v",
-        "outputId": "ee7d1260-81d9-4f54-a7e9-58965516c27c"
+        "outputId": "affa83a2-c30c-4f9d-9289-13ed27838ba3"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +155,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-05011f07-840c-4107-8fe2-a6947eeb3e0d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-78a09fe8-9c29-4dca-b98f-96c192eed23d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -211,7 +228,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-05011f07-840c-4107-8fe2-a6947eeb3e0d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-78a09fe8-9c29-4dca-b98f-96c192eed23d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -263,12 +280,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-05011f07-840c-4107-8fe2-a6947eeb3e0d button.colab-df-convert');\n",
+              "        document.querySelector('#df-78a09fe8-9c29-4dca-b98f-96c192eed23d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-05011f07-840c-4107-8fe2-a6947eeb3e0d');\n",
+              "        const element = document.querySelector('#df-78a09fe8-9c29-4dca-b98f-96c192eed23d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -288,8 +305,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-3c6fba7a-5e17-436a-8990-16ae439a86fa\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3c6fba7a-5e17-436a-8990-16ae439a86fa')\"\n",
+              "<div id=\"df-78d60762-ac44-4b8a-9697-342e5c8cde1e\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-78d60762-ac44-4b8a-9697-342e5c8cde1e')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -408,7 +425,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-3c6fba7a-5e17-436a-8990-16ae439a86fa button');\n",
+              "        document.querySelector('#df-78d60762-ac44-4b8a-9697-342e5c8cde1e button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -425,7 +442,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 3
         }
       ]
     },
@@ -464,9 +481,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D4B4D_dA3bPw",
-        "outputId": "9d424ea5-d27f-4862-e91f-980375aeb85e"
+        "outputId": "f80085f0-3f4e-4381-be2c-641c04407208"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,7 +510,7 @@
         "all_sheets_data = {}\n",
         "\n",
         "# Iterate through each sheet name in the Excel file\n",
-        "for sheet_name in excel_file.sheet_names:\n",
+        "for sheet_name in df_xlsx.sheet_names:\n",
         "    # Read each sheet into a DataFrame and store it in the dictionary\n",
         "    all_sheets_data[sheet_name] = pd.read_excel(excel_file, sheet_name=sheet_name)\n",
         "\n",
@@ -510,72 +527,23 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 216
         },
         "id": "NSqOt7DC3qCr",
-        "outputId": "28faac7f-e904-47df-8261-e85b8b088532"
+        "outputId": "7d7b65c0-b291-407e-9350-b96eb196a7cc"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Sheet Name: Queries\n",
-            "                         Top queries  Clicks  Impressions     CTR  Position\n",
-            "0                    enable supplies      66          122  0.5410      1.32\n",
-            "1              scooter board ireland       2          116  0.0172     10.89\n",
-            "2              portable travel hoist       2           25  0.0800     28.76\n",
-            "3  when not to use a toileting sling       2           12  0.1667     14.75\n",
-            "4                            t stool       1          298  0.0034     27.16\n",
-            "--------------------\n",
-            "Sheet Name: Pages\n",
-            "                                           Top pages  Clicks  Impressions  \\\n",
-            "0                        https://enablesupplies.com/     114         2021   \n",
-            "1  https://enablesupplies.com/product/v-amat-auto...      15          415   \n",
-            "2  https://enablesupplies.com/product-category/ho...       8          574   \n",
-            "3   https://enablesupplies.com/product/guldmann-gh3/       8           85   \n",
-            "4  https://enablesupplies.com/product-category/sc...       6          104   \n",
-            "\n",
-            "      CTR  Position  \n",
-            "0  0.0564     43.19  \n",
-            "1  0.0361     41.39  \n",
-            "2  0.0139     34.55  \n",
-            "3  0.0941     25.68  \n",
-            "4  0.0577     37.37  \n",
-            "--------------------\n",
-            "Sheet Name: Countries\n",
-            "          Country  Clicks  Impressions     CTR  Position\n",
-            "0         Ireland     208         3863  0.0538     24.78\n",
-            "1  United Kingdom      26         4890  0.0053     49.26\n",
-            "2   United States       9         5946  0.0015     58.66\n",
-            "3          Canada       8          332  0.0241     47.89\n",
-            "4          Sweden       6          179  0.0335     28.59\n",
-            "--------------------\n",
-            "Sheet Name: Devices\n",
-            "    Device  Clicks  Impressions     CTR  Position\n",
-            "0  Desktop     172        22583  0.0076     54.05\n",
-            "1   Mobile     100         7372  0.0136     41.20\n",
-            "2   Tablet       6           98  0.0612     12.93\n",
-            "--------------------\n",
-            "Sheet Name: Search appearance\n",
-            "   Search Appearance  Clicks  Impressions     CTR  Position\n",
-            "0   Product snippets      22          475  0.0463     19.72\n",
-            "1  Merchant listings       2            7  0.2857      4.29\n",
-            "--------------------\n",
-            "Sheet Name: Dates\n",
-            "        Date  Clicks  Impressions     CTR  Position\n",
-            "0 2025-01-13       4          379  0.0106     51.38\n",
-            "1 2025-01-12       1          286  0.0035     52.15\n",
-            "2 2025-01-11       1          600  0.0017     54.90\n",
-            "3 2025-01-10       4          301  0.0133     52.99\n",
-            "4 2025-01-09       3          247  0.0121     49.81\n",
-            "--------------------\n",
-            "Sheet Name: Filters\n",
-            "        Filter          Value\n",
-            "0  Search type            Web\n",
-            "1         Date  Last 3 months\n",
-            "--------------------\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'excel_file' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-69eca9d79284>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Iterate through each sheet name in the Excel file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0msheet_name\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexcel_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msheet_names\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;31m# Read each sheet into a DataFrame and store it in the dictionary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mall_sheets_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msheet_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_excel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexcel_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msheet_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msheet_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'excel_file' is not defined"
           ]
         }
       ]
