--- a/Loading_Data_EXCEL.ipynb
+++ b/Loading_Data_EXCEL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuPCAvj3vmKcGfG35GsH0y",
+      "authorship_tag": "ABX9TyPYJXQ3/By+HeHpRP7CE9LR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,10 +37,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "id": "WogefL6iwJYG",
-        "outputId": "11f13736-82ff-42fc-c8c1-9158261208a6",
+        "outputId": "cbd56296-854e-4ca1-9924-ae3473dbf75d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -100,9 +100,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6h-_LDQK0Vcf",
-        "outputId": "8bdb8c5c-2fda-4d4a-8a25-38fc9ab4610b"
+        "outputId": "ae26eeea-3ded-42cc-cd0e-328b5474f5d3"
       },
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,9 +138,9 @@
           "height": 206
         },
         "id": "WNhcQOJ-203v",
-        "outputId": "affa83a2-c30c-4f9d-9289-13ed27838ba3"
+        "outputId": "a7e0f1d4-6b7e-4c24-f38f-e7c290de95bb"
       },
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -155,7 +155,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-78a09fe8-9c29-4dca-b98f-96c192eed23d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ac90ca44-b2e2-41a4-8aa8-763baecaa2b6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -228,7 +228,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-78a09fe8-9c29-4dca-b98f-96c192eed23d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ac90ca44-b2e2-41a4-8aa8-763baecaa2b6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -280,12 +280,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-78a09fe8-9c29-4dca-b98f-96c192eed23d button.colab-df-convert');\n",
+              "        document.querySelector('#df-ac90ca44-b2e2-41a4-8aa8-763baecaa2b6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-78a09fe8-9c29-4dca-b98f-96c192eed23d');\n",
+              "        const element = document.querySelector('#df-ac90ca44-b2e2-41a4-8aa8-763baecaa2b6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -305,8 +305,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-78d60762-ac44-4b8a-9697-342e5c8cde1e\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-78d60762-ac44-4b8a-9697-342e5c8cde1e')\"\n",
+              "<div id=\"df-dfc058ae-1979-4e69-a089-07db306cda05\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-dfc058ae-1979-4e69-a089-07db306cda05')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -425,7 +425,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-78d60762-ac44-4b8a-9697-342e5c8cde1e button');\n",
+              "        document.querySelector('#df-dfc058ae-1979-4e69-a089-07db306cda05 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -442,7 +442,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 8
         }
       ]
     },
@@ -481,9 +481,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D4B4D_dA3bPw",
-        "outputId": "f80085f0-3f4e-4381-be2c-641c04407208"
+        "outputId": "38e4529f-6b60-4afa-864f-58d8e5d3a153"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,18 +506,22 @@
     {
       "cell_type": "code",
       "source": [
+        "# Specify the path to your Excel file\n",
+        "excel_file = '/content/enable.xlsx'\n",
+        "\n",
         "# Create an empty dictionary to store DataFrames for each sheet\n",
         "all_sheets_data = {}\n",
         "\n",
+        "# Use pd.ExcelFile to efficiently read all sheets\n",
+        "xls = pd.ExcelFile(excel_file, engine='openpyxl')\n",
+        "\n",
         "# Iterate through each sheet name in the Excel file\n",
-        "for sheet_name in df_xlsx.sheet_names:\n",
+        "for sheet_name in xls.sheet_names:\n",
         "    # Read each sheet into a DataFrame and store it in the dictionary\n",
-        "    all_sheets_data[sheet_name] = pd.read_excel(excel_file, sheet_name=sheet_name)\n",
+        "    all_sheets_data[sheet_name] = pd.read_excel(excel_file, sheet_name=sheet_name, engine='openpyxl')\n",
         "\n",
         "# Now you have all the sheets in the 'all_sheets_data' dictionary\n",
         "# Access each sheet's DataFrame using the sheet name as the key:\n",
-        "# Example: Access data from sheet named \"Sheet1\"\n",
-        "# df_sheet1 = all_sheets_data[\"Sheet1\"]\n",
         "\n",
         "# Print the sheet names and the first few rows of each sheet\n",
         "for sheet_name, df in all_sheets_data.items():\n",
@@ -526,24 +530,73 @@
         "    print(\"-\" * 20)"
       ],
       "metadata": {
+        "id": "dEVDrBtM6y1T",
+        "outputId": "7cb4fa58-7c3a-41cc-bbf5-9f7a8d72b4de",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 216
-        },
-        "id": "NSqOt7DC3qCr",
-        "outputId": "7d7b65c0-b291-407e-9350-b96eb196a7cc"
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 5,
+      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'excel_file' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-69eca9d79284>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Iterate through each sheet name in the Excel file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0msheet_name\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexcel_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msheet_names\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;31m# Read each sheet into a DataFrame and store it in the dictionary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mall_sheets_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msheet_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_excel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexcel_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msheet_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msheet_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'excel_file' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sheet Name: Queries\n",
+            "                         Top queries  Clicks  Impressions     CTR  Position\n",
+            "0                    enable supplies      66          122  0.5410      1.32\n",
+            "1              scooter board ireland       2          116  0.0172     10.89\n",
+            "2              portable travel hoist       2           25  0.0800     28.76\n",
+            "3  when not to use a toileting sling       2           12  0.1667     14.75\n",
+            "4                            t stool       1          298  0.0034     27.16\n",
+            "--------------------\n",
+            "Sheet Name: Pages\n",
+            "                                           Top pages  Clicks  Impressions  \\\n",
+            "0                        https://enablesupplies.com/     114         2021   \n",
+            "1  https://enablesupplies.com/product/v-amat-auto...      15          415   \n",
+            "2  https://enablesupplies.com/product-category/ho...       8          574   \n",
+            "3   https://enablesupplies.com/product/guldmann-gh3/       8           85   \n",
+            "4  https://enablesupplies.com/product-category/sc...       6          104   \n",
+            "\n",
+            "      CTR  Position  \n",
+            "0  0.0564     43.19  \n",
+            "1  0.0361     41.39  \n",
+            "2  0.0139     34.55  \n",
+            "3  0.0941     25.68  \n",
+            "4  0.0577     37.37  \n",
+            "--------------------\n",
+            "Sheet Name: Countries\n",
+            "          Country  Clicks  Impressions     CTR  Position\n",
+            "0         Ireland     208         3863  0.0538     24.78\n",
+            "1  United Kingdom      26         4890  0.0053     49.26\n",
+            "2   United States       9         5946  0.0015     58.66\n",
+            "3          Canada       8          332  0.0241     47.89\n",
+            "4          Sweden       6          179  0.0335     28.59\n",
+            "--------------------\n",
+            "Sheet Name: Devices\n",
+            "    Device  Clicks  Impressions     CTR  Position\n",
+            "0  Desktop     172        22583  0.0076     54.05\n",
+            "1   Mobile     100         7372  0.0136     41.20\n",
+            "2   Tablet       6           98  0.0612     12.93\n",
+            "--------------------\n",
+            "Sheet Name: Search appearance\n",
+            "   Search Appearance  Clicks  Impressions     CTR  Position\n",
+            "0   Product snippets      22          475  0.0463     19.72\n",
+            "1  Merchant listings       2            7  0.2857      4.29\n",
+            "--------------------\n",
+            "Sheet Name: Dates\n",
+            "        Date  Clicks  Impressions     CTR  Position\n",
+            "0 2025-01-13       4          379  0.0106     51.38\n",
+            "1 2025-01-12       1          286  0.0035     52.15\n",
+            "2 2025-01-11       1          600  0.0017     54.90\n",
+            "3 2025-01-10       4          301  0.0133     52.99\n",
+            "4 2025-01-09       3          247  0.0121     49.81\n",
+            "--------------------\n",
+            "Sheet Name: Filters\n",
+            "        Filter          Value\n",
+            "0  Search type            Web\n",
+            "1         Date  Last 3 months\n",
+            "--------------------\n"
           ]
         }
       ]
