--- a/Loading_Data_EXCEL.ipynb
+++ b/Loading_Data_EXCEL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYJXQ3/By+HeHpRP7CE9LR",
+      "authorship_tag": "ABX9TyPywK5dSGW1WdH5iL51zlsT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,6 +181,21 @@
       ],
       "metadata": {
         "id": "dEVDrBtM6y1T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Export each DataFrame to a separate CSV file\n",
+        "for sheet_name, df in all_sheets_data.items():\n",
+        "    csv_file_name = f\"{sheet_name}.csv\"  # Create the CSV file name based on sheet name\n",
+        "    df.to_csv(csv_file_name, index=False)  # Export to CSV, set index=False to avoid saving row indices\n",
+        "    print(f\"DataFrame '{sheet_name}' exported to '{csv_file_name}'\")"
+      ],
+      "metadata": {
+        "id": "t_9BkUPkEi9Y"
       },
       "execution_count": null,
       "outputs": []
