--- a/Loading_Data_XML.ipynb
+++ b/Loading_Data_XML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhFwJUL6oABx1knwiGKL9i",
+      "authorship_tag": "ABX9TyMJ7eq3+1MMjmOOWzfQY9bT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -183,6 +183,18 @@
       ],
       "metadata": {
         "id": "B_lq16_xDEXb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.to_csv('property_export.csv', index=False)  # Export to CSV, set index=False to avoid saving row indices\n",
+        "print(f\"DataFrame exported to '{csv_file_name}'\")"
+      ],
+      "metadata": {
+        "id": "vaMCPqxXFAq-"
       },
       "execution_count": null,
       "outputs": []
