--- a/Loading_Data_XML.ipynb
+++ b/Loading_Data_XML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJ7eq3+1MMjmOOWzfQY9bT",
+      "authorship_tag": "ABX9TyPCagH9N9gD/DwDQ+XdhPC8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,13 +78,13 @@
       "metadata": {
         "id": "4ziUI1pK-YV7"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Assuming 'product-feed.xml' is in your current working directory.\n",
+        "# Assuming 'xml file is in the path' is in your current working directory.\n",
         "# If not, specify the full path.\n",
         "tree = ET.parse('6955_Default.xml')\n",
         "root = tree.getroot()\n",
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "Jx7fFuWg-mgW"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "-mRYmHXy-pMx"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
       "metadata": {
         "id": "OdIU8flVA2E5"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -173,7 +173,7 @@
       "metadata": {
         "id": "50bCNgnvDA8p"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -190,11 +190,11 @@
     {
       "cell_type": "code",
       "source": [
-        "df.to_csv('property_export.csv', index=False)  # Export to CSV, set index=False to avoid saving row indices\n",
-        "print(f\"DataFrame exported to '{csv_file_name}'\")"
+        "df_prop.to_csv('proeprty_export.csv', index=False)  # Export to CSV, set index=False to avoid saving row indices\n",
+        "print(f\"DataFrame exported:\")"
       ],
       "metadata": {
-        "id": "vaMCPqxXFAq-"
+        "id": "SE-VIo0pFwoh"
       },
       "execution_count": null,
       "outputs": []
