--- a/SQLite_DB_Exercise_GH.ipynb
+++ b/SQLite_DB_Exercise_GH.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPL0cm2YJhFt2Od5ym9/u9/",
+      "authorship_tag": "ABX9TyMXZ9o1h80QuZ0qWy7YspT+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,11 +51,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "0iMWnVhS8qjx"
+        "id": "0iMWnVhS8qjx",
+        "outputId": "47b0355b-be54-42b0-b048-00b3b4a73109",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Database and tables created successfully!\n"
+          ]
+        }
+      ],
       "source": [
         "import sqlite3\n",
         "\n",
@@ -130,10 +142,35 @@
         "#conn.close()\n"
       ],
       "metadata": {
-        "id": "7YAxyXoB9rN_"
+        "id": "7YAxyXoB9rN_",
+        "outputId": "597e8323-69c5-4649-9d98-ba62ba7cebde",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Table: student\n",
+            "  Column: ID, Type: TEXT, NotNull: 0, DefaultVal: None, PrimaryKey: 1\n",
+            "  Column: First, Type: TEXT, NotNull: 1, DefaultVal: None, PrimaryKey: 0\n",
+            "  Column: Last, Type: TEXT, NotNull: 1, DefaultVal: None, PrimaryKey: 0\n",
+            "--------------------\n",
+            "Table: grade\n",
+            "  Column: ID, Type: TEXT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
+            "  Column: Code, Type: TEXT, NotNull: 1, DefaultVal: None, PrimaryKey: 0\n",
+            "  Column: Mark, Type: INTEGER, NotNull: 1, DefaultVal: None, PrimaryKey: 0\n",
+            "--------------------\n",
+            "Table: course\n",
+            "  Column: Code, Type: TEXT, NotNull: 0, DefaultVal: None, PrimaryKey: 1\n",
+            "  Column: Title, Type: TEXT, NotNull: 1, DefaultVal: None, PrimaryKey: 0\n",
+            "--------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -370,7 +407,7 @@
       "source": [
         "**STEP 4: Load CSV files into the database tables:**\n",
         "\n",
-        "This will populate the database tables with the data from teh csv files.  No need to write INSERT statements.\n",
+        "This will populate the database tables with the data from the csv files.  No need to write INSERT statements.\n",
         "\n",
         "You need to make sure the correct files are loaded into the corresponding tables."
       ],
@@ -381,9 +418,9 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "import csv\n",
         "def import_csv_to_table(csv_file, table_name):\n",
-        "    #opens the file aas read only 'r', doesn't allow the origianl csv to be changed.\n",
+        "    #opens the file as read only 'r', doesn't allow the origianl csv to be changed.\n",
         "    with open(csv_file, 'r', encoding='utf-8') as file:\n",
         "        csv_reader = csv.reader(file)\n",
         "        next(csv_reader)  # Skip header row if present\n",
@@ -395,7 +432,7 @@
         "            sql = f\"INSERT INTO {table_name} VALUES ({placeholders})\"\n",
         "            cursor.execute(sql, row)\n",
         "\n",
-        "# Import data from CSV files into the relevant table - Student_Table goes into student table.  teh import_csv_to_table is the function, passing the two values across.\n",
+        "# Import data from CSV files into the relevant table - Student_Table goes into student table.  Teh import_csv_to_table is the function, passing the two values across.\n",
         "try:\n",
         "    import_csv_to_table('Student_Table.csv', 'student')\n",
         "    import_csv_to_table('Course_Table.csv', 'course')\n",
@@ -412,9 +449,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ed0T4gXZLTD4",
-        "outputId": "8eb9e845-de53-49c5-a3f2-ec1a49f77c59"
+        "outputId": "c2afe96f-74fa-4758-8a49-3bbce52a13f1"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,6 +476,7 @@
     {
       "cell_type": "code",
       "source": [
+        "import pandas as pd\n",
         "# Query all three tables and load into pandas DataFrames\n",
         "student_df = pd.read_sql_query(\"SELECT * FROM student\", conn)\n",
         "grade_df = pd.read_sql_query(\"SELECT * FROM grade\", conn)\n",
@@ -455,10 +493,44 @@
         "\n"
       ],
       "metadata": {
-        "id": "plFao_d5O3A8"
+        "id": "plFao_d5O3A8",
+        "outputId": "24c0f802-8120-42d8-83ca-42c715af0a7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Student Table:\n",
+            "      ID    First     Last\n",
+            "0  S1001    Alice    Smith\n",
+            "1  S1002      Bob    Brown\n",
+            "2  S1003  Charlie  Johnson\n",
+            "3  S1004    David   Taylor\n",
+            "4  S1005     Emma    Brown\n",
+            "\n",
+            "Grade Table:\n",
+            "      ID  Code  Mark\n",
+            "0  S1005  C123    55\n",
+            "1  S1005  C124    76\n",
+            "2  S1011  C124    47\n",
+            "3  S1014  C117    50\n",
+            "4  S1032  C116    54\n",
+            "\n",
+            "Course Table:\n",
+            "   Code                Title\n",
+            "0  C101      Mathematics 101\n",
+            "1  C102  Physics Inroduction\n",
+            "2  C103  Chemistry Practical\n",
+            "3  C104     Computer Science\n",
+            "4  C105  Economics & Finance\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -474,7 +546,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# only run if you need to reset the tables without deleting the databae and starting again - then re-run the box previous box.\n",
+        "# only run if you need to reset the tables without deleting the database and starting again - then re-run the box previous box.\n",
         "# Delete all data from the tables\n",
         "cursor.execute(\"DELETE FROM student\")\n",
         "cursor.execute(\"DELETE FROM grade\")\n",
@@ -519,7 +591,7 @@
       "cell_type": "code",
       "source": [
         "# Select all columns from the student table\n",
-        "student_df = pd.read_sql_query(\"SELECT * FROM student\", conn)\n",
+        "student_df = pd.read_sql_query(\"SELECT <WHAT> FROM <WHERE>\", conn)\n",
         "\n",
         "#What should the output be.\n",
         "print(student_df)\n",
@@ -535,7 +607,7 @@
       "cell_type": "code",
       "source": [
         "# Select Last from the student table\n",
-        "studentLast_df = pd.read_sql_query(\"SELECT ALL Last FROM student\", conn)\n",
+        "studentLast_df = pd.read_sql_query(\"SELECT <WHAT> FROM <WHERE>\", conn)\n",
         "\n",
         "#What should the output be.\n",
         "print(studentLast_df)\n",
@@ -551,7 +623,7 @@
       "cell_type": "code",
       "source": [
         "# Select DISTINCT last names from the student table\n",
-        "studentLastUnique_df = pd.read_sql_query(\"SELECT DISTINCT Last FROM student\", conn)\n",
+        "studentLastUnique_df = pd.read_sql_query(\"SELECT <WHAT> FROM <WHERE>\", conn)\n",
         "\n",
         "#What should the output be.   What does this tell you from the previous outputs?\n",
         "print(studentLastUnique_df)\n",
@@ -590,8 +662,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Select Last from the student table\n",
-        "studentWhere_df = pd.read_sql_query(\"SELECT * FROM grade WHERE Mark > 60\", conn)\n",
+        "# Select Marks taht are over 60.\n",
+        "studentWhere_df = pd.read_sql_query(\"SELECT <WHAT> FROM <WHERE> WHERE <WHAT FILTER>\", conn)\n",
         "\n",
         "#What should the output be.\n",
         "print(studentWhere_df)"
@@ -680,7 +752,7 @@
       "source": [
         "**STEP 8: Select from multiple tables in one statement**\n",
         "\n",
-        "This can cause issues where tables have hte same column names in different tables.  \n",
+        "This can cause issues where tables have the same column names in different tables.  \n",
         "\n",
         "To resolve this we need to make use of the following syntax:\n",
         "TableName.Column"
@@ -693,7 +765,7 @@
       "cell_type": "code",
       "source": [
         "#select the following coloumns:  First, Last & Mark from the Student and Grade tables\n",
-        "studentMarks_df = pd.read_sql_query(\"SELECT First, Last, Mark FROM student, grade WHERE (student.ID = grade.ID)\", conn)\n",
+        "studentMarks_df = pd.read_sql_query(\"SELECT <WHAT> FROM <TABLES> WHERE <STATEMENT>\", conn)\n",
         "\n",
         "print(studentMarks_df)\n"
       ],
@@ -745,7 +817,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#modify the query to gather the 'Finance Management Course and all studnet that obtained a mark between 55 and 65\n",
+        "#modify the query to gather the 'Statistics For Python' Course and all studnet that obtained a mark between 55 and 65\n",
         "studentMarks_df = pd.read_sql_query(\"<INSERT QUERY>\", conn)\n",
         "\n",
         "print(studentMarks_df)"
@@ -761,7 +833,7 @@
       "source": [
         "**STEP 9: ORDER BY statements**\n",
         "\n",
-        "Can be set to be either ASC or DESC.  The syntax is ORDER BY added to the select statement."
+        "Can be set to be either ASC or DESC.  The syntax is ORDER BY added to the select statement.  The default setting if not included is ASC."
       ],
       "metadata": {
         "id": "zkc1rMFpvcXL"
@@ -770,7 +842,7 @@
     {
       "cell_type": "code",
       "source": [
-        "studentMarks_df = pd.read_sql_query(\"SELECT * FROM grade ORDER BY Mark DESC\", conn)\n",
+        "studentMarks_df = pd.read_sql_query(\"SELECT * FROM grade ORDER BY Mark\", conn)\n",
         "\n",
         "print (studentMarks_df)"
       ],
@@ -836,7 +908,7 @@
     {
       "cell_type": "code",
       "source": [
-        "studentMarks_df = pd.read_sql_query(\"SELECT First, Last, Mark, Course.Code, Title FROM grade, student, course WHERE (student.id = grade.id) AND (course.title = 'Statistics For Python') ORDER BY Mark ASC\", conn)\n",
+        "studentMarks_df = pd.read_sql_query(\"<WRITE STATEMENT>\", conn)\n",
         "print (studentMarks_df)"
       ],
       "metadata": {
@@ -862,7 +934,7 @@
       "cell_type": "code",
       "source": [
         "#simple Adding values, Subtracting Values, Multiplyig Values:\n",
-        "studentCount_df = pd.read_sql_query(\"SELECT Mark, Mark/2 AS DIVIDED, Mark*2 AS DOUBLED, MArk+10 AS MODERATED FROM grade\", conn)\n",
+        "studentCount_df = pd.read_sql_query(\"SELECT Mark, Mark/2 AS DIVIDED, Mark*2 AS DOUBLED, Mark+10 AS MODERATED FROM grade\", conn)\n",
         "print (studentCount_df)"
       ],
       "metadata": {
@@ -987,7 +1059,7 @@
       "source": [
         "**TASK**\n",
         "\n",
-        "Create a query to show the First, Last name of the student and there average grade across all modules."
+        "Create a query to show the First, Last name of the student and their average grade across all modules and how many moudles have been taken."
       ],
       "metadata": {
         "id": "9oa6vYCs9fIS"
@@ -1010,7 +1082,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We can use HAVING to repalce a WHERE when we have items that have been grouped together."
+        "We can use HAVING to replace a WHERE when we have items that have been grouped together."
       ],
       "metadata": {
         "id": "m874It_P-_dd"
@@ -1036,9 +1108,9 @@
       "source": [
         "**STEP 12: Using JOINS**\n",
         "\n",
-        "Cross JOIN A & B - retunrs all pairs of rows from A and B\n",
+        "Cross JOIN A & B - returns all pairs of rows from A and B\n",
         "\n",
-        "Natural JOIN A & B - returns pairs of rwos with comon values for idnetical names columns and without dupilcating columns\n",
+        "Natural JOIN A & B - returns pairs of rows with common values for identical names columns and without dupilcating columns\n",
         "\n",
         "Inner JOIN A & B - returns pairs of rows satisfying a condition"
       ],
@@ -1093,6 +1165,173 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**STEP 13: Using a WHEN Statement**\n",
+        "\n",
+        "The WHEN statement provides the ablity to develop categorising of data, conditional calculations, and filtering results.\n",
+        "\n",
+        "It works similar in function to an IF .. ELSE statement.\n",
+        "\n",
+        "Data Classification:"
+      ],
+      "metadata": {
+        "id": "ZJq6E550FR6C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SQL query with CASE statement to classify marks\n",
+        "query = \"\"\"\n",
+        "SELECT\n",
+        "    student.First,\n",
+        "    student.Last,\n",
+        "    grade.Mark,\n",
+        "    CASE\n",
+        "        WHEN grade.Mark < 50 THEN 'FAIL'\n",
+        "        WHEN grade.Mark BETWEEN 50 AND 59 THEN 'PASS'\n",
+        "        WHEN grade.Mark BETWEEN 60 AND 69 THEN 'PASS'\n",
+        "        WHEN grade.Mark BETWEEN 70 AND 79 THEN 'DISTINCTION'\n",
+        "        ELSE 'NOT ACHIEVABLE'\n",
+        "    END AS Grade\n",
+        "FROM student\n",
+        "JOIN grade ON student.ID = grade.ID\n",
+        "WHERE grade.code = 'C115';\n",
+        "\"\"\"\n",
+        "\n",
+        "# Execute query\n",
+        "studentMark_df = pd.read_sql_query(query, conn)\n",
+        "print(studentMark_df)"
+      ],
+      "metadata": {
+        "id": "E1RBVGRRETDb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Conditional Calculations:"
+      ],
+      "metadata": {
+        "id": "Cq6fGx-iG8lZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SQL query with CASE statement to classify marks\n",
+        "query = \"\"\"SELECT\n",
+        "    Code,\n",
+        "    Mark,\n",
+        "    ID,\n",
+        "    CASE\n",
+        "        WHEN Mark >= 70 THEN Mark * 0.90  -- 10% reduction\n",
+        "        WHEN Mark <= 50 THEN Mark * 0.95   -- 5% reduction\n",
+        "        ELSE Mark  -- No change\n",
+        "    END AS Moderated_Mark\n",
+        "FROM grade;\n",
+        "\"\"\"\n",
+        "\n",
+        "# Execute query\n",
+        "studentMark_df = pd.read_sql_query(query, conn)\n",
+        "print(studentMark_df)"
+      ],
+      "metadata": {
+        "id": "0NfX_h2QGB7R",
+        "outputId": "af31ce3a-0e0a-4b99-f3dc-c4fe15dfa008",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     Code  Mark     ID  Moderated_Mark\n",
+            "0    C123    55  S1005           55.00\n",
+            "1    C124    76  S1005           68.40\n",
+            "2    C124    47  S1011           44.65\n",
+            "3    C117    50  S1014           47.50\n",
+            "4    C116    54  S1032           54.00\n",
+            "..    ...   ...    ...             ...\n",
+            "795  C117    54  S1037           54.00\n",
+            "796  C103    57  S1039           57.00\n",
+            "797  C114    74  S1012           66.60\n",
+            "798  C104    53  S1030           53.00\n",
+            "799  C102    54  S1037           54.00\n",
+            "\n",
+            "[800 rows x 4 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Running Multiple Quieries:"
+      ],
+      "metadata": {
+        "id": "IzV-Ph6xHEwR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "query = \"\"\"\n",
+        "SELECT\n",
+        "    ID,\n",
+        "    Code,\n",
+        "    Mark,\n",
+        "    CASE Code\n",
+        "        WHEN 'C123' THEN 'Finance'\n",
+        "        WHEN 'C104' THEN 'Course 120'\n",
+        "        WHEN 'C117' THEN 'Course 103'\n",
+        "        ELSE 'Unknown Status'\n",
+        "    END AS UpdatedStatus\n",
+        "FROM grade;\n",
+        "\"\"\"\n",
+        "\n",
+        "# Execute query\n",
+        "studentMark_df = pd.read_sql_query(query, conn)\n",
+        "print(studentMark_df)"
+      ],
+      "metadata": {
+        "id": "cJt1eaVmITqz",
+        "outputId": "0f997732-d782-49e2-b6c1-346a03bd6574",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "        ID  Code  Mark   UpdatedStatus\n",
+            "0    S1005  C123    55         Finance\n",
+            "1    S1005  C124    76  Unknown Status\n",
+            "2    S1011  C124    47  Unknown Status\n",
+            "3    S1014  C117    50      Course 103\n",
+            "4    S1032  C116    54  Unknown Status\n",
+            "..     ...   ...   ...             ...\n",
+            "795  S1037  C117    54      Course 103\n",
+            "796  S1039  C103    57  Unknown Status\n",
+            "797  S1012  C114    74  Unknown Status\n",
+            "798  S1030  C104    53      Course 120\n",
+            "799  S1037  C102    54  Unknown Status\n",
+            "\n",
+            "[800 rows x 4 columns]\n"
+          ]
+        }
+      ]
     }
   ]
 }
